Fixed filenames with pound signs in them

--- a/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Monsters (Alt)/index.html
+++ b/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Monsters (Alt)/index.html
@@ -11,7 +11,6 @@
 <div><a href="../../../../index.html">5e Artisanal Database</a> → <a href="../index.html">5.1 SRD (D&D 2014)</a> → Monsters (Alt)</div>
 
 <h1>Monsters (Alt)</h1><ul>
-<li><a href="# Monster Statistics.html"># Monster Statistics</a></li>
 <li><a href="Creatures A-C.html">Creatures A-C</a></li>
 <li><a href="Creatures D-F.html">Creatures D-F</a></li>
 <li><a href="Creatures G-I.html">Creatures G-I</a></li>
@@ -20,6 +19,7 @@
 <li><a href="Creatures P-R.html">Creatures P-R</a></li>
 <li><a href="Creatures S-U.html">Creatures S-U</a></li>
 <li><a href="Creatures V-Z.html">Creatures V-Z</a></li>
+<li><a href="Monster Statistics.html">Monster Statistics</a></li>
 <li><a href="Monsters A.html">Monsters A</a></li>
 <li><a href="Monsters B.html">Monsters B</a></li>
 <li><a href="Monsters C.html">Monsters C</a></li>
