--- a/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Spells (Alt)/Spell Lists.html
+++ b/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Spells (Alt)/Spell Lists.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div><a href="../../../../index.html">5e Artisanal Database</a> → <a href="../index.html">5.1 SRD (D&D 2014)</a> → <a href="index.html">Spells (Alt)</a> → SPELL LISTS</div>
-<p><a href="../../../md/5.1 SRD (D&D 2014)/Spells (Alt)/## Spell Lists.md">Markdown</a></p>
+<p><a href="../../../md/5.1 SRD (D&D 2014)/Spells (Alt)/Spell Lists.md">Markdown</a></p>
 <h1>SPELL LISTS</h1>
 <h2>Bard Spells</h2>
 <h4>Cantrips (0 Level)</h4>
