--- a/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Spells (Alt)/Spellcasting.html
+++ b/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Spells (Alt)/Spellcasting.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div><a href="../../../../index.html">5e Artisanal Database</a> → <a href="../index.html">5.1 SRD (D&D 2014)</a> → <a href="index.html">Spells (Alt)</a> → SPELLCASTING</div>
-<p><a href="../../../md/5.1 SRD (D&D 2014)/Spells (Alt)/# Spellcasting.md">Markdown</a></p>
+<p><a href="../../../md/5.1 SRD (D&D 2014)/Spells (Alt)/Spellcasting.md">Markdown</a></p>
 <h1>SPELLCASTING</h1>
 <p>Magic permeates fantasy gaming worlds and often appears in the form of a spell.</p>
 <p>This chapter provides the rules for casting spells. Different character classes have distinctive ways of learning and preparing their spells, and monsters use spells in unique ways. Regardless of its source, a spell follows the rules here.</p>
