--- a/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Spells (Alt)/index.html
+++ b/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Spells (Alt)/index.html
@@ -11,8 +11,8 @@
 <div><a href="../../../../index.html">5e Artisanal Database</a> → <a href="../index.html">5.1 SRD (D&D 2014)</a> → Spells (Alt)</div>
 
 <h1>Spells (Alt)</h1><ul>
-<li><a href="# Spellcasting.html"># Spellcasting</a></li>
-<li><a href="## Spell Lists.html">## Spell Lists</a></li>
+<li><a href="Spell Lists.html">Spell Lists</a></li>
+<li><a href="Spellcasting.html">Spellcasting</a></li>
 <li><a href="Spells A.html">Spells A</a></li>
 <li><a href="Spells B.html">Spells B</a></li>
 <li><a href="Spells C.html">Spells C</a></li>
