--- a/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Treasure (Alt)/Artifacts.html
+++ b/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Treasure (Alt)/Artifacts.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div><a href="../../../../index.html">5e Artisanal Database</a> → <a href="../index.html">5.1 SRD (D&D 2014)</a> → <a href="index.html">Treasure (Alt)</a> → Artifacts</div>
-<p><a href="../../../md/5.1 SRD (D&D 2014)/Treasure (Alt)/## Artifacts.md">Markdown</a></p>
+<p><a href="../../../md/5.1 SRD (D&D 2014)/Treasure (Alt)/Artifacts.md">Markdown</a></p>
 <h1>Artifacts</h1>
 <h3>Orb of Dragonkind</h3>
 <p><em>Wondrous item, artifact (requires attunement)</em></p>
