--- a/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Treasure (Alt)/Magic Items.html
+++ b/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Treasure (Alt)/Magic Items.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div><a href="../../../../index.html">5e Artisanal Database</a> → <a href="../index.html">5.1 SRD (D&D 2014)</a> → <a href="index.html">Treasure (Alt)</a> → Magic Items</div>
-<p><a href="../../../md/5.1 SRD (D&D 2014)/Treasure (Alt)/# Magic Items.md">Markdown</a></p>
+<p><a href="../../../md/5.1 SRD (D&D 2014)/Treasure (Alt)/Magic Items.md">Markdown</a></p>
 <h1>Magic Items</h1>
 <p>Magic items are gleaned from the hoards of conquered monsters or discovered in long-­‐‑lost vaults. Such items grant capabilities a character could rarely have otherwise, or they complement their owner’s capabilities in wondrous ways.</p>
 <h2>Attunement</h2>
