--- a/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Treasure (Alt)/Sentient Magic.html
+++ b/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Treasure (Alt)/Sentient Magic.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div><a href="../../../../index.html">5e Artisanal Database</a> → <a href="../index.html">5.1 SRD (D&D 2014)</a> → <a href="index.html">Treasure (Alt)</a> → Sentient Magic</div>
-<p><a href="../../../md/5.1 SRD (D&D 2014)/Treasure (Alt)/## Sentient Magic.md">Markdown</a></p>
+<p><a href="../../../md/5.1 SRD (D&D 2014)/Treasure (Alt)/Sentient Magic.md">Markdown</a></p>
 <h1>Sentient Magic</h1>
 <p>Some magic items possess sentience and personality. Such an item might be possessed, haunted by the spirit of a previous owner, or self-aware thanks to the magic used to create it. In any case, the item behaves like a character, complete with personality quirks, ideals, bonds, and sometimes flaws. A sentient item might be a cherished ally to its wielder or a continual thorn in the side.</p>
 <p>Most sentient items are weapons. Other kinds of items can manifest sentience, but consumable items such as potions and scrolls are never sentient.</p>
