--- a/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Treasure (Alt)/index.html
+++ b/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Treasure (Alt)/index.html
@@ -11,9 +11,7 @@
 <div><a href="../../../../index.html">5e Artisanal Database</a> → <a href="../index.html">5.1 SRD (D&D 2014)</a> → Treasure (Alt)</div>
 
 <h1>Treasure (Alt)</h1><ul>
-<li><a href="# Magic Items.html"># Magic Items</a></li>
-<li><a href="## Artifacts.html">## Artifacts</a></li>
-<li><a href="## Sentient Magic.html">## Sentient Magic</a></li>
+<li><a href="Artifacts.html">Artifacts</a></li>
 <li><a href="Magic Items A.html">Magic Items A</a></li>
 <li><a href="Magic Items B.html">Magic Items B</a></li>
 <li><a href="Magic Items C.html">Magic Items C</a></li>
@@ -40,6 +38,8 @@
 <li><a href="Magic Items X.html">Magic Items X</a></li>
 <li><a href="Magic Items Y.html">Magic Items Y</a></li>
 <li><a href="Magic Items Z.html">Magic Items Z</a></li>
+<li><a href="Magic Items.html">Magic Items</a></li>
+<li><a href="Sentient Magic.html">Sentient Magic</a></li>
 </ul>
 </body>
 </html>
