--- a/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Monsters (Alt)/Monster Statistics.html
+++ b/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Monsters (Alt)/Monster Statistics.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div><a href="../../../../index.html">5e Artisanal Database</a> → <a href="../index.html">5.1 SRD (D&D 2014)</a> → <a href="index.html">Monsters (Alt)</a> → Monster Statistics</div>
-<p><a href="../../../md/5.1 SRD (D&D 2014)/Monsters (Alt)/# Monster Statistics.md">Markdown</a></p>
+<p><a href="../../../md/5.1 SRD (D&D 2014)/Monsters (Alt)/Monster Statistics.md">Markdown</a></p>
 <h1>Monster Statistics</h1>
 <p>A monster’s statistics, sometimes referred to as its <strong>stat block</strong>, provide the essential information that you need to run the monster. </p>
 <h2>Size</h2>
