--- a/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Races/index.html
+++ b/5e_artisanal_database/rules/html/5.1 SRD (D&D 2014)/Races/index.html
@@ -11,7 +11,6 @@
 <div><a href="../../../../index.html">5e Artisanal Database</a> → <a href="../index.html">5.1 SRD (D&D 2014)</a> → Races</div>
 
 <h1>Races</h1><ul>
-<li><a href="# Racial Traits.html"># Racial Traits</a></li>
 <li><a href="Dragonborn.html">Dragonborn</a></li>
 <li><a href="Dwarf.html">Dwarf</a></li>
 <li><a href="Elf.html">Elf</a></li>
@@ -20,6 +19,7 @@
 <li><a href="Half-Orc.html">Half-Orc</a></li>
 <li><a href="Halfling.html">Halfling</a></li>
 <li><a href="Human.html">Human</a></li>
+<li><a href="Racial Traits.html">Racial Traits</a></li>
 <li><a href="Tiefling.html">Tiefling</a></li>
 </ul>
 </body>
