Added starting equipment to BFRD

--- a/5e_artisanal_database/rules/html/Black Flag (Tales of the Valiant)/02 Character Classes.html
+++ b/5e_artisanal_database/rules/html/Black Flag (Tales of the Valiant)/02 Character Classes.html
@@ -1461,7 +1461,7 @@
 <p>You start with the following equipment, in addition to the equipment granted by your background:</p>
 <ul>
 <li>(<em>a</em>) a shield or (<em>b</em>) any simple weapon</li>
-<li>(<em>a</em>) a scimitar or (<em>b</em>) any simple melee weapon</li>
+<li>(<em>a</em>) a sickle or (<em>b</em>) any simple melee weapon</li>
 <li>Leather armor, an explorer's pack, and a druidic focus</li>
 </ul>
 <h3>Table: Druid Progression / Primordial Spell Slots By Circle</h3>
