More updates to the BFRD based on their new SRD.

--- a/5e_artisanal_database/rules/html/Black Flag (Tales of the Valiant)/01 Character Creation & Leveling.html
+++ b/5e_artisanal_database/rules/html/Black Flag (Tales of the Valiant)/01 Character Creation & Leveling.html
@@ -333,6 +333,265 @@
 <p>Spells Known and Prepared. Determine what spells you know and can prepare for each class individually, as if you were a single-classed member of that class. If you are a 4th-level ranger and 3rd-level wizard, for example, you know three 1st-circle Primordial spells based on your ranger class levels. As a 3rd-level wizard, you know three Arcane cantrips, and your spellbook contains ten Arcane spells, two of which (the two you gained when you reached 3rd level as a wizard) can be 2nd-circle spells. If your Intelligence is 16, you can prepare six Arcane spells from your spellbook.</p>
 <p>Each spell you know and prepare is associated with one of your classes, and you use the spellcasting ability of that class when you cast the spell. Similarly, a spellcasting focus, such as a holy symbol, can be used only for the spells from the class associated with that focus.</p>
 <p><strong>Spell Slots.</strong> Determine your available spell slots by adding together all your levels in the bard, cleric, druid, sorcerer, and wizard classes, and half your levels (rounded down) in the paladin and ranger classes. Use this total to determine your spell slots by consulting the <strong>Multiclass Spellcaster</strong> table.</p>
+<h4>Multiclass Spellcaster: Spell Slots per Spell Circle</h4>
+<table>
+<thead>
+<tr>
+<th>CHARACTER LEVEL</th>
+<th>1ST</th>
+<th>2ND</th>
+<th>3RD</th>
+<th>4TH</th>
+<th>5TH</th>
+<th>6TH</th>
+<th>7TH</th>
+<th>8TH</th>
+<th>9TH</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1st</td>
+<td>2</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+</tr>
+<tr>
+<td>2nd</td>
+<td>3</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+</tr>
+<tr>
+<td>3rd</td>
+<td>4</td>
+<td>2</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+</tr>
+<tr>
+<td>4th</td>
+<td>4</td>
+<td>3</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+</tr>
+<tr>
+<td>5th</td>
+<td>4</td>
+<td>3</td>
+<td>2</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+</tr>
+<tr>
+<td>6th</td>
+<td>4</td>
+<td>3</td>
+<td>3</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+</tr>
+<tr>
+<td>7th</td>
+<td>4</td>
+<td>3</td>
+<td>3</td>
+<td>1</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+</tr>
+<tr>
+<td>8th</td>
+<td>4</td>
+<td>3</td>
+<td>3</td>
+<td>2</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+</tr>
+<tr>
+<td>9th</td>
+<td>4</td>
+<td>3</td>
+<td>3</td>
+<td>3</td>
+<td>1</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+</tr>
+<tr>
+<td>10th</td>
+<td>4</td>
+<td>3</td>
+<td>3</td>
+<td>3</td>
+<td>2</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+</tr>
+<tr>
+<td>11th</td>
+<td>4</td>
+<td>3</td>
+<td>3</td>
+<td>3</td>
+<td>2</td>
+<td>1</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+</tr>
+<tr>
+<td>12th</td>
+<td>4</td>
+<td>3</td>
+<td>3</td>
+<td>3</td>
+<td>2</td>
+<td>1</td>
+<td>—</td>
+<td>—</td>
+<td>—</td>
+</tr>
+<tr>
+<td>13th</td>
+<td>4</td>
+<td>3</td>
+<td>3</td>
+<td>3</td>
+<td>2</td>
+<td>1</td>
+<td>1</td>
+<td>—</td>
+<td>—</td>
+</tr>
+<tr>
+<td>14th</td>
+<td>4</td>
+<td>3</td>
+<td>3</td>
+<td>3</td>
+<td>2</td>
+<td>1</td>
+<td>1</td>
+<td>—</td>
+<td>—</td>
+</tr>
+<tr>
+<td>15th</td>
+<td>4</td>
+<td>3</td>
+<td>3</td>
+<td>3</td>
+<td>2</td>
+<td>1</td>
+<td>1</td>
+<td>1</td>
+<td>—</td>
+</tr>
+<tr>
+<td>16th</td>
+<td>4</td>
+<td>3</td>
+<td>3</td>
+<td>3</td>
+<td>2</td>
+<td>1</td>
+<td>1</td>
+<td>1</td>
+<td>—</td>
+</tr>
+<tr>
+<td>17th</td>
+<td>4</td>
+<td>3</td>
+<td>3</td>
+<td>3</td>
+<td>2</td>
+<td>1</td>
+<td>1</td>
+<td>1</td>
+<td>1</td>
+</tr>
+<tr>
+<td>18th</td>
+<td>4</td>
+<td>3</td>
+<td>3</td>
+<td>3</td>
+<td>3</td>
+<td>1</td>
+<td>1</td>
+<td>1</td>
+<td>1</td>
+</tr>
+<tr>
+<td>19th</td>
+<td>4</td>
+<td>3</td>
+<td>3</td>
+<td>3</td>
+<td>3</td>
+<td>2</td>
+<td>1</td>
+<td>1</td>
+<td>1</td>
+</tr>
+<tr>
+<td>20th</td>
+<td>4</td>
+<td>3</td>
+<td>3</td>
+<td>3</td>
+<td>3</td>
+<td>2</td>
+<td>1</td>
+<td>1</td>
+<td>1</td>
+</tr>
+</tbody>
+</table>
 <p>If you have more than one spellcasting class, this table might give you spell slots of a circle that is higher than the spells you know or can prepare. You can use those slots, but only to cast your lower-circle spells. If a lower-circle spell that you cast, like burning hands, has an enhanced effect when cast using a higher-circle slot, you can use the enhanced effect, even though you don't have spells of that higher circle.</p>
 <p>For example, if you are a 4th-level ranger and 3rd level wizard, you count as a 5th-level character when determining your spell slots: you have four 1st-circle slots, three 2nd-circle slots, and two 3rd-circle slots. However, you don't know any 3rd-circle spells, nor do you know any 2nd-circle Primordial spells. You can use the spell slots of those circles to cast the spells you do know and potentially enhance their effects.</p>
 </body>
