--- a/5e_artisanal_database/rules/html/Black Flag (Tales of the Valiant)/07 Playing the Game.html
+++ b/5e_artisanal_database/rules/html/Black Flag (Tales of the Valiant)/07 Playing the Game.html
@@ -341,9 +341,11 @@
 <p><strong><em>Cold.</em></strong> The infernal chill radiating from an ice devil's spear and the frigid blast of a white dragon's breath deal cold damage.</p>
 <p><strong><em>Fire.</em></strong> Red dragons breathe fire, and many spells conjure flames to deal fire damage.</p>
 <p><strong><em>Force.</em></strong> Force is pure magical energy focused into a damaging form. Most effects that deal force damage are spells, including magic missile and spiritual weapon.</p>
-<p><strong><em>Lightning.</em></strong> A lightning bolt spell and a blue dragon's breath deal lightning damage. Necrotic. Necrotic damage, dealt by certain Undead and a spell such as grave touch, withers matter and even the soul.</p>
+<p><strong><em>Lightning.</em></strong> A lightning bolt spell and a blue dragon's breath deal lightning damage.</p>
+<p><strong><em>Necrotic.</em></strong> Necrotic damage, dealt by certain Undead and a spell such as grave touch, withers matter and even the soul.</p>
 <p><strong><em>Piercing.</em></strong> Puncturing and impaling attacks, including spears and monster bites, deal piercing damage.</p>
 <p><strong><em>Poison.</em></strong> Venomous stings and the toxic gas of a green dragon's breath deal poison damage.</p>
+<p><strong><em>Psychic.</em></strong> Mental abilities or abilities that assault the mind, such as an aboleth's Psychic Bolt or a ghost's Horrify, deal psychic damage.</p>
 <p><strong><em>Radiant.</em></strong> Radiant damage, dealt by a cleric's flame strike spell or an angel's smiting weapon, sears the flesh like fire and overloads the spirit with power.</p>
 <p><strong><em>Slashing.</em></strong> Swords, axes, and claws deal slashing damage.</p>
 <p><strong><em>Thunder.</em></strong> A concussive burst of sound, such as the effect of the thunderwave spell, deals thunder damage.</p>
